[project]
name = "dip-blog-codes"
version = "0.1.0"
description = ""
authors = [{ name = "johnny95731", email = "johnny95731@yahoo.com" }]
license = "MIT"
license-files = ["LICENSE*"]
requires-python = ">=3.12, <3.15"

[tool.poetry]
packages = [{ include = "src" }]
package-mode = false

[tool.poetry.dependencies]
opencv-contrib-python = "^4.11"
numpy = "^2.0"

[tool.poetry.group.torch]
optional = true

[tool.poetry.group.torch.dependencies]
torch = { version = "^2.10"}

[tool.poetry.group.torch-cuda]
optional = true

[tool.poetry.group.torch-cuda.dependencies]
torch = { version = "^2.10", source = "torch" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.9"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
